// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 1`] = `
"+---+---+---+---+
| [31m5[39m   [31m5[39m   [31m5[39m | [96m0[39m |
+---+---+---    |
| [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m |
|               |
| [35m4[39m   [35m4[39m   [35m4[39m | [96m0[39m |
|   +---+---    |
| [35m4[39m | [95m1[39m   [95m1[39m | [96m0[39m |
+---    +---+---+
| [92m2[39m | [95m1[39m | [92m2[39m | [95m1[39m |
+           +---+
| [92m2[39m | [95m1[39m | [92m2[39m | [91m3[39m |
+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m | [96m0[39m |
+---+---+---+---+

room 0 size=5 cells=3,7,11,15,27
room 1 size=5 cells=13,14,17,19,21
room 2 size=4 cells=16,18,20,22
room 3 size=4 cells=23,24,25,26
room 4 size=7 cells=4,5,6,8,9,10,12
room 5 size=3 cells=0,1,2"
`;

exports[`grid from { width: 4, height: 7, rooms: 6 } can be displayed in the cli 2`] = `
"+---+---+---+---+
| 5   5   5 | 0 |
+---+---+---    |
| 4   4   4 | 0 |
|               |
| 4   4   4 | 0 |
|   +---+---    |
| 4 | 1   1 | 0 |
+---    +---+---+
| 2 | 1 | 2 | 1 |
+           +---+
| 2 | 1 | 2 | 3 |
+---+---+---+---+
| 3   3   3 | 0 |
+---+---+---+---+

room 0 size=5 cells=3,7,11,15,27
room 1 size=5 cells=13,14,17,19,21
room 2 size=4 cells=16,18,20,22
room 3 size=4 cells=23,24,25,26
room 4 size=7 cells=4,5,6,8,9,10,12
room 5 size=3 cells=0,1,2"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+                   |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
|           +---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m   [96m0[39m |
+---+---+---        |
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
|                   |
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---+---+---+---+

room 0 size=12 cells=13,14,15,16,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,12"
`;

exports[`grid from { width: 5, height: 5, rooms: 2 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+                   |
| 1   1   1   1   1 |
|           +---+---+
| 1   1   1 | 0   0 |
+---+---+---        |
| 0   0   0   0   0 |
|                   |
| 0   0   0   0   0 |
+---+---+---+---+---+

room 0 size=12 cells=13,14,15,16,17,18,19,20,21,22,23,24
room 1 size=13 cells=0,1,2,3,4,5,6,7,8,9,10,11,12"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+           +---+---+
| [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m   [96m0[39m |
+---+---+---        |
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
|   +---+---+---+---+
| [96m0[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---                |
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=8 cells=8,9,10,11,12,13,14,15
room 1 size=8 cells=0,1,2,3,4,5,6,7
room 2 size=9 cells=16,17,18,19,20,21,22,23,24"
`;

exports[`grid from { width: 5, height: 5, rooms: 3 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 1   1   1   1   1 |
+           +---+---+
| 1   1   1 | 0   0 |
+---+---+---        |
| 0   0   0   0   0 |
|   +---+---+---+---+
| 0 | 2   2   2   2 |
+---                |
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=8 cells=8,9,10,11,12,13,14,15
room 1 size=8 cells=0,1,2,3,4,5,6,7
room 2 size=9 cells=16,17,18,19,20,21,22,23,24"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+---+---+---+---+---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+       +---+---+---+
| [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m |
+---+---            |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+---+---+---+---+---+
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+

room 0 size=7 cells=5,6,7,8,9,10,11
room 1 size=8 cells=12,13,14,15,16,17,18,19
room 2 size=5 cells=20,21,22,23,24
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`grid from { width: 5, height: 5, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+
| 3   3   3   3   3 |
+---+---+---+---+---+
| 0   0   0   0   0 |
+       +---+---+---+
| 0   0 | 1   1   1 |
+---+---            |
| 1   1   1   1   1 |
+---+---+---+---+---+
| 2   2   2   2   2 |
+---+---+---+---+---+

room 0 size=7 cells=5,6,7,8,9,10,11
room 1 size=8 cells=12,13,14,15,16,17,18,19
room 2 size=5 cells=20,21,22,23,24
room 3 size=5 cells=0,1,2,3,4"
`;

exports[`grid from { width: 5, height: 5, rooms: 12 } can be displayed in the cli 1`] = `
"+---+---+----+----+----+
| [31m5[39m   [31m5[39m | [33m11[39m   [33m11[39m   [33m11[39m |
+---+---     +----+----+
| [96m0[39m   [96m0[39m | [33m11[39m | [91m3[39m    [91m3[39m  |
+---+---+----+----+----+
| [93m6[39m   [93m6[39m   [93m6[39m  | [34m7[39m    [34m7[39m  |
+---+---+----+----+----+
| [94m9[39m   [94m9[39m | [92m2[39m  | [36m10[39m | [32m8[39m  |
+---+---+----+----+----+
| [35m4[39m   [35m4[39m   [35m4[39m    [35m4[39m  | [95m1[39m  |
+---+---+----+----+----+

room 0 size=2 cells=5,6
room 1 size=1 cells=24
room 2 size=1 cells=17
room 3 size=2 cells=8,9
room 4 size=4 cells=20,21,22,23
room 5 size=2 cells=0,1
room 6 size=3 cells=10,11,12
room 7 size=2 cells=13,14
room 8 size=1 cells=19
room 9 size=2 cells=15,16
room 10 size=1 cells=18
room 11 size=4 cells=2,3,4,7"
`;

exports[`grid from { width: 5, height: 5, rooms: 12 } can be displayed in the cli 2`] = `
"+---+---+----+----+----+
| 5   5 | 11   11   11 |
+---+---     +----+----+
| 0   0 | 11 | 3    3  |
+---+---+----+----+----+
| 6   6   6  | 7    7  |
+---+---+----+----+----+
| 9   9 | 2  | 10 | 8  |
+---+---+----+----+----+
| 4   4   4    4  | 1  |
+---+---+----+----+----+

room 0 size=2 cells=5,6
room 1 size=1 cells=24
room 2 size=1 cells=17
room 3 size=2 cells=8,9
room 4 size=4 cells=20,21,22,23
room 5 size=2 cells=0,1
room 6 size=3 cells=10,11,12
room 7 size=2 cells=13,14
room 8 size=1 cells=19
room 9 size=2 cells=15,16
room 10 size=1 cells=18
room 11 size=4 cells=2,3,4,7"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m |
+                                       +---    |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m | [95m1[39m |
|                                               |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [96m0[39m | [95m1[39m |
|       +---+---+---+---+---+---+---+---    +---+
| [95m1[39m   [95m1[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
+---+---                                        |
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
|                                               |
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m |
|                           +---+---+---+---+---+
| [91m3[39m   [91m3[39m | [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+       +---+---+---+---+---                    |
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
|                                               |
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
|   +---+---+---+---+---+---+---+---+---+---+---+
| [91m3[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---                                            |
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
|                                               |
| [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=37 cells=22,34,38,39,40,41,42,43,44,45,46,47,50,51,52,53,54,55,56,57,58,59,62,63,64,65,66,67,68,69,70,71,74,75,76,77,78
room 1 size=36 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,27,28,29,30,31,32,33,35,36,37
room 2 size=35 cells=109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143
room 3 size=36 cells=48,49,60,61,72,73,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108"
`;

exports[`grid from { width: 12, height: 12, rooms: 4 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 1   1   1   1   1   1   1   1   1   1   1   1 |
+                                       +---    |
| 1   1   1   1   1   1   1   1   1   1 | 0 | 1 |
|                                               |
| 1   1   1   1   1   1   1   1   1   1 | 0 | 1 |
|       +---+---+---+---+---+---+---+---    +---+
| 1   1 | 0   0   0   0   0   0   0   0   0   0 |
+---+---                                        |
| 3   3 | 0   0   0   0   0   0   0   0   0   0 |
|                                               |
| 3   3 | 0   0   0   0   0   0   0   0   0   0 |
|                           +---+---+---+---+---+
| 3   3 | 0   0   0   0   0 | 3   3   3   3   3 |
+       +---+---+---+---+---                    |
| 3   3   3   3   3   3   3   3   3   3   3   3 |
|                                               |
| 3   3   3   3   3   3   3   3   3   3   3   3 |
|   +---+---+---+---+---+---+---+---+---+---+---+
| 3 | 2   2   2   2   2   2   2   2   2   2   2 |
+---                                            |
| 2   2   2   2   2   2   2   2   2   2   2   2 |
|                                               |
| 2   2   2   2   2   2   2   2   2   2   2   2 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=37 cells=22,34,38,39,40,41,42,43,44,45,46,47,50,51,52,53,54,55,56,57,58,59,62,63,64,65,66,67,68,69,70,71,74,75,76,77,78
room 1 size=36 cells=0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,23,24,25,26,27,28,29,30,31,32,33,35,36,37
room 2 size=35 cells=109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143
room 3 size=36 cells=48,49,60,61,72,73,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m |
+               +---+---+---                +---+
| [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [31m5[39m | [96m0[39m   [96m0[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m |
+                                               |
| [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m | [31m5[39m | [96m0[39m   [96m0[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m |
|           +---                                |
| [35m4[39m   [35m4[39m   [35m4[39m | [92m2[39m | [31m5[39m | [96m0[39m   [96m0[39m | [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m |
+---+---+---                    +---+---+---    |
| [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m | [31m5[39m | [96m0[39m   [96m0[39m | [93m6[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m |
|                           +---                |
| [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m | [31m5[39m | [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m |
|                                               |
| [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m | [31m5[39m | [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m |
|                                               |
| [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m | [31m5[39m | [96m0[39m   [96m0[39m   [96m0[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m |
|               +---    +---+---                |
| [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m | [34m7[39m | [96m0[39m | [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m   [95m1[39m | [92m2[39m |
|   +---+---    +---+---                    +---+
| [34m7[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [91m3[39m   [91m3[39m | [95m1[39m   [95m1[39m   [95m1[39m | [91m3[39m |
+---+---+---+---+---+---        +---+---+---    |
| [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [31m5[39m | [91m3[39m |
|               +---+---                +---    |
| [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=18 cells=17,18,29,30,41,42,53,54,65,66,67,77,78,79,89,90,91,101
room 1 size=18 cells=56,57,58,68,69,70,80,81,82,92,93,94,104,105,106,116,117,118
room 2 size=19 cells=23,35,39,47,51,59,63,71,75,83,87,95,99,107,109,110,111,112,113
room 3 size=18 cells=102,103,114,115,119,126,127,128,129,131,136,137,138,139,140,141,142,143
room 4 size=17 cells=0,1,2,3,4,5,12,13,14,15,24,25,26,27,36,37,38
room 5 size=18 cells=16,28,40,52,64,76,88,120,121,122,123,124,125,130,132,133,134,135
room 6 size=19 cells=6,7,8,9,10,11,19,20,21,22,31,32,33,34,43,44,45,46,55
room 7 size=17 cells=48,49,50,60,61,62,72,73,74,84,85,86,96,97,98,100,108"
`;

exports[`grid from { width: 12, height: 12, rooms: 8 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 4   4   4   4   4   4 | 6   6   6   6   6   6 |
+               +---+---+---                +---+
| 4   4   4   4 | 5 | 0   0 | 6   6   6   6 | 2 |
+                                               |
| 4   4   4   4 | 5 | 0   0 | 6   6   6   6 | 2 |
|           +---                                |
| 4   4   4 | 2 | 5 | 0   0 | 6   6   6   6 | 2 |
+---+---+---                    +---+---+---    |
| 7   7   7 | 2 | 5 | 0   0 | 6 | 1   1   1 | 2 |
|                           +---                |
| 7   7   7 | 2 | 5 | 0   0   0 | 1   1   1 | 2 |
|                                               |
| 7   7   7 | 2 | 5 | 0   0   0 | 1   1   1 | 2 |
|                                               |
| 7   7   7 | 2 | 5 | 0   0   0 | 1   1   1 | 2 |
|               +---    +---+---                |
| 7   7   7 | 2 | 7 | 0 | 3   3 | 1   1   1 | 2 |
|   +---+---    +---+---                    +---+
| 7 | 2   2   2   2   2 | 3   3 | 1   1   1 | 3 |
+---+---+---+---+---+---        +---+---+---    |
| 5   5   5   5   5   5 | 3   3   3   3 | 5 | 3 |
|               +---+---                +---    |
| 5   5   5   5 | 3   3   3   3   3   3   3   3 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=18 cells=17,18,29,30,41,42,53,54,65,66,67,77,78,79,89,90,91,101
room 1 size=18 cells=56,57,58,68,69,70,80,81,82,92,93,94,104,105,106,116,117,118
room 2 size=19 cells=23,35,39,47,51,59,63,71,75,83,87,95,99,107,109,110,111,112,113
room 3 size=18 cells=102,103,114,115,119,126,127,128,129,131,136,137,138,139,140,141,142,143
room 4 size=17 cells=0,1,2,3,4,5,12,13,14,15,24,25,26,27,36,37,38
room 5 size=18 cells=16,28,40,52,64,76,88,120,121,122,123,124,125,130,132,133,134,135
room 6 size=19 cells=6,7,8,9,10,11,19,20,21,22,31,32,33,34,43,44,45,46,55
room 7 size=17 cells=48,49,50,60,61,62,72,73,74,84,85,86,96,97,98,100,108"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 1`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m |
+                                               |
| [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m   [96m0[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m |
|   +---+---+---+---+---+---                    |
| [96m0[39m | [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [34m7[39m   [34m7[39m | [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m   [35m4[39m |
+---                            +---+---+---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [34m7[39m   [34m7[39m | [35m4[39m | [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m |
+                           +---        +---+---+
| [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m   [91m3[39m | [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m   [34m7[39m | [92m2[39m   [92m2[39m |
+       +---+---+---+---+---+---+---+---        |
| [91m3[39m   [91m3[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [92m2[39m   [92m2[39m |
+---+---                    +---+---+---        |
| [93m6[39m   [93m6[39m | [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m   [31m5[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m |
|       +---+---+---+---+---                +---+
| [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [92m2[39m   [92m2[39m   [92m2[39m   [92m2[39m | [32m8[39m |
+                       +---+---+---+---+---    |
| [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m   [93m6[39m | [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m |
+---+---+---+---+---+---                        |
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m   [32m8[39m |
|                           +---+---+---+---+---+
| [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [32m8[39m | [95m1[39m   [95m1[39m   [95m1[39m   [95m1[39m | [94m9[39m |
+---+---+---+---+---+---+---+---+---+---+---    |
| [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m   [94m9[39m |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=15 cells=0,1,2,3,4,5,6,12,13,14,15,16,17,18,24
room 1 size=16 cells=108,109,110,111,112,113,120,121,122,123,124,125,127,128,129,130
room 2 size=13 cells=58,59,70,71,79,80,81,82,83,91,92,93,94
room 3 size=16 cells=25,26,27,28,36,37,38,39,40,48,49,50,51,52,60,61
room 4 size=16 cells=7,8,9,10,11,19,20,21,22,23,31,32,33,34,35,43
room 5 size=13 cells=62,63,64,65,66,67,68,69,74,75,76,77,78
room 6 size=15 cells=72,73,84,85,86,87,88,89,90,96,97,98,99,100,101
room 7 size=13 cells=29,30,41,42,44,45,46,47,53,54,55,56,57
room 8 size=14 cells=95,102,103,104,105,106,107,114,115,116,117,118,119,126
room 9 size=13 cells=131,132,133,134,135,136,137,138,139,140,141,142,143"
`;

exports[`grid from { width: 12, height: 12, rooms: 10 } can be displayed in the cli 2`] = `
"+---+---+---+---+---+---+---+---+---+---+---+---+
| 0   0   0   0   0   0   0 | 4   4   4   4   4 |
+                                               |
| 0   0   0   0   0   0   0 | 4   4   4   4   4 |
|   +---+---+---+---+---+---                    |
| 0 | 3   3   3   3 | 7   7 | 4   4   4   4   4 |
+---                            +---+---+---+---+
| 3   3   3   3   3 | 7   7 | 4 | 7   7   7   7 |
+                           +---        +---+---+
| 3   3   3   3   3 | 7   7   7   7   7 | 2   2 |
+       +---+---+---+---+---+---+---+---        |
| 3   3 | 5   5   5   5   5   5   5   5 | 2   2 |
+---+---                    +---+---+---        |
| 6   6 | 5   5   5   5   5 | 2   2   2   2   2 |
|       +---+---+---+---+---                +---+
| 6   6   6   6   6   6   6 | 2   2   2   2 | 8 |
+                       +---+---+---+---+---    |
| 6   6   6   6   6   6 | 8   8   8   8   8   8 |
+---+---+---+---+---+---                        |
| 1   1   1   1   1   1 | 8   8   8   8   8   8 |
|                           +---+---+---+---+---+
| 1   1   1   1   1   1 | 8 | 1   1   1   1 | 9 |
+---+---+---+---+---+---+---+---+---+---+---    |
| 9   9   9   9   9   9   9   9   9   9   9   9 |
+---+---+---+---+---+---+---+---+---+---+---+---+

room 0 size=15 cells=0,1,2,3,4,5,6,12,13,14,15,16,17,18,24
room 1 size=16 cells=108,109,110,111,112,113,120,121,122,123,124,125,127,128,129,130
room 2 size=13 cells=58,59,70,71,79,80,81,82,83,91,92,93,94
room 3 size=16 cells=25,26,27,28,36,37,38,39,40,48,49,50,51,52,60,61
room 4 size=16 cells=7,8,9,10,11,19,20,21,22,23,31,32,33,34,35,43
room 5 size=13 cells=62,63,64,65,66,67,68,69,74,75,76,77,78
room 6 size=15 cells=72,73,84,85,86,87,88,89,90,96,97,98,99,100,101
room 7 size=13 cells=29,30,41,42,44,45,46,47,53,54,55,56,57
room 8 size=14 cells=95,102,103,104,105,106,107,114,115,116,117,118,119,126
room 9 size=13 cells=131,132,133,134,135,136,137,138,139,140,141,142,143"
`;
